=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Breaking Changes
----------------

Changes
-------
 
Fixes
-----

2017/10/20 1.7.1
================

Fixes
-----

 - Fixed an issue that delayed the overview chart's initial display.  

 - Fixed issue that caused the redirect to ``/401`` in case of 
   unauthorized access to fail. 

 - Fixed casting issue in the Monitoring query.

 - Fixed issue that caused the cluster view to not redirect
   to the first node by default. 

2017/10/17 1.7.0
================

Changes
-------

 - Added pagination to Console results.

2017/10/17 1.6.4
================

Fixes
----- 

 - Keep input of console when changing tabs.

 - Added focus on textbox when the console view is loaded and after
   clicking on the `Execute Query` button.

 - Shard and node details are now loaded on demand in the shards view.

 - Fixed issue that caused the cluster check display to be delayed.

 - Fix formating of strings in the console view.

2017/10/10 1.6.3
================

Fixes
----- 

 - Update position of the navigation menu elements.

 - Fixed left Join condition in shards query that previously caused 
   duplicated shards to be displayed.

 - Added loading indicator in shards view.

 - Do not automatically execute the query when clicking on 
   the "Query Table" button in the table view.

2017/09/26 1.6.2
================

Fixes
----- 

 - Improve shards view performance
 
 - Remove horizontal scroll from the console editor.

2017/09/18 1.6.1
================

Fixes
-----

 - Fixed an issue that caused the tooltip to have a wrong position
   in the Shards view. 

2017/09/18 1.6.0
================

Changes
-------

 - Added Shards plugin for the Enterprise Edition. The shard 
   plugin is a visualization that displays information about 
   shards by table, partition and node. 

 - Added query table to Tables view.

 - Implemented share query feature in the Console.
